feat: analyze orchestration (async task polling + proportional refund + UI)